# 008-options-greeks

./: .gitkeep  README.specify.md  chapter.en.md  chapter.ru.md  readme.simple.en.md  readme.simple.ru.md
code/: Cargo.toml
code/benches/: pricing_benchmark.rs
code/examples/: volatility_surface.rs
code/src/: binomial_tree.rs  black_scholes.rs  finite_difference.rs  greeks.rs  heston_model.rs  lib.rs  main.rs  monte_carlo.rs  option_types.rs  portfolio_risk.rs
